# dstoolkit-mlops-databricks

./: .gitignore  =  README.md  delete.py  dev.env  pyproject.toml  requirements.txt  score.py  setup.ps1  test.json  winedata.csv  workspace.code-workspace
.azureDevOps/: delete.json
.azureDevOps/workflows/1-Master/: onDeploy.yaml
.azureDevOps/workflows/2-Jobs/: jobDatabricks.yaml
.azureDevOps/workflows/3-Tasks/: taskDatabricks.yaml
.azure_devops/workflows/1-master-pipelines/: cicd-pipeline.yaml  manual-pipeline.yaml
.azure_devops/workflows/2-jobs-pipelines/: job-deployment.yaml
.azure_devops/workflows/3-steps-pipelines/: step-deployment.yaml  step-pr-tests.yaml
.dbx/: lock.json  project.json
.dbx/sync/: Feature1-repos-d6c3a3377fafd65c20bad00173f55565  dbxTest-repos-5ad15c808a98b706407ec15c90f312ed  dstoolkit-mlops-databricks-repos-5d9e8e23f719bb7eb0fec57ff5055f0a  feature1-repos-63c9d43b8b5380eb290f32b934fc6c2a
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: 1-Big-Bang-Databricks-CICD-Deployment.yml  2-PR-Feature-On-Main-[DEV].yml  3-PR-On-Release-[UAT].yml  4-PR-On-Release-Approved-[PPE].yml  5-Tag-Release-[PROD].yml  Master.onDeploy.yml  onDeploy.yaml  onDeploy.yml  onRelease.yaml  taskDatabricks.yaml
.github/workflows/Pipeline_Param/: Development.json  PreProduction.json  Production.json  UAT.json
.github/workflows/RBAC_Role_Definition/: DBX_Custom_Role.json
.github/workflows/Utilities/: Utils-Assign-RBAC.sh  Utils-Azure-Resources.sh  Utils-Create-Cluster.sh  Utils-Create-Job.sh  Utils-Create-PAToken.sh  Utils-Create-Repo-Folders.sh  Utils-Create-Scope.sh  Utils-Create-Wheels-DBFS-Cluster-Upload.sh  Utils-DBX-AAD-Token-Autentication.sh  Utils-DBX-CLI-Configure.sh  Utils-Databricks-Create-Custom-Role.sh  Utils-Env-Variables-For-Azure-Resources-Created.sh  Utils-Git-Pull-DBX-Repo.sh
.github/workflows/remove/: 2-PR-Feature-On-Main-[DEV].yml  4-PR-On-Release-Approved-[PPE].yml
DBX_Workflows/CICD_Deployments/: DBX_Workflow_Deployments.yaml  DBX_Workflow_Parameters.yaml
DBX_Workflows/Sandbox_Expermentation/: DBX_Workflow_Deployments.yaml  DBX_Workflow_Parameters.yaml
Data Engineer/: ETL.py
Data_Engineer/: ETL.py
Data_Scientist/: AML_Databricks_MLFlow_Integration.py  KeyVaultSecrets.py  azureMLModelUpload.py  delete.py  featureEngineering.py  featureStoreTaxiMLOps.py  housePriceModelling.py  modelTraining.py  test.py
Data_Scientist/experimental/: featureStoreTaxiMLOps.py
Data_Scientist/experimental_ignore/: azureMLModelUpload.py  test.ipynb
Data_Scientist/ignore - experimental/: test.ipynb
Data_Scientist/pyWheels/Helper_Functions/: requirements.txt
Data_Scientist/pyWheels/mlpipelines/: requirements.txt  setup.py
Data_Scientist/pyWheels/pyWheel-1/: requirements.txt  setup.py
Data_Scientist/pyWheels/pyWheel-2/: setup.py
Data_Scientist/pyWheels/wheel1/: requirements.txt  setup.py
Infrastructure/Az_Resources/Az_DataLake/: Az_DataLake.bicep
Infrastructure/Az_Resources/Az_Databricks/: Az_Databricks.bicep
Infrastructure/Az_Resources/Az_KeyVault/: Az_KeyVault.bicep
Infrastructure/DBX_CICD_Deployment/: Main_DBX_CICD.bicep
MLOps/DataOps/: transformations.py
MLOps/DataOps/nyc_taxi/: data_prep.py
MLOps_Engineer/1-DevOps_Pipeline_Layer/Jobs/: jobDatabricks.yaml
MLOps_Engineer/1-DevOps_Pipeline_Layer/Tasks/: taskDatabricks.yaml
MLOps_Engineer/1-DevOps_Pipeline_Layer/taskDatabricks/: action.yaml
MLOps_Engineer/2-Infrastructure_Layer/DBX_CICD_Deployment/: Main_DBX_CICD.bicep
ML_Scripts/: ML_e2e_Run.py
ML_Scripts - IGNORE/Data Engineer/: ETL.py
ML_Scripts - IGNORE/Machine Learning Engineer/: Readme
ML_Scripts/Data Engineer/: ETL.py
ML_Scripts/Data Scientist/: Create_Feature_Store.py
ML_Scripts/Feature_Engineering/: Create_Feature_Store.py
conf/: deployment.yaml
conf/jobConfigs/: jobConfigs.yaml
conf/job_params/: sandbox.yaml  uat.yaml
conf/vars/: vars.yaml
data_science/nyc_taxi/pyWheels/: .gitignore
data_science/nyc_taxi_src/utils/: .gitignore
data_science/src_nyc_taxi/: src.py
data_science/src_nyc_taxi/evaluation/: __init__.py
data_science/src_nyc_taxi/feature_table_refresh/: __init__.py
data_science/src_nyc_taxi/feature_tbl_refresh/: __init__.py
data_science/src_nyc_taxi/featurization/: __init__.py
data_science/src_nyc_taxi/nyc_taxi_src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data_science/src_nyc_taxi/registration/: __init__.py
data_science/src_nyc_taxi/score/: __init__.py
data_science/src_nyc_taxi/src_nyc_taxi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_science/src_nyc_taxi/training/: __init__.py
data_science/src_nyc_taxi/transform/: __init__.py
data_science/src_nyc_taxi/transform_features/: __init__.py
data_science/src_nyc_taxi/utils/: __init__.py
dataops/src_nyc_taxi/: transform.py
experiments/: workflow.yaml
experiments/notebook/: nyc_e2e.ipynb  nyc_taxi_ex1.ipynb  test.py
experiments/notebooks/: nyc_taxi_lgbm_1.ipynb  nyc_taxi_lgbm_1.py  nyc_taxi_lgbm_pyfunc_1.ipynb
experiments/pipelines/ciaran_experiments/: workflow.yaml
infrastructure/bicep/: main.bicep
mlOps/dataOps/nyc_taxi/: data_prep.py
mlOps/devOps/utils/: .coverage
mlOps/nyc_taxi/databricks_ml_pipelines/: workflow.yaml
mlOps/nyc_taxi/databricks_pipelines/: hyper_params.yaml  workflow.yaml  workflow_params.yaml
mlOps/nyc_taxi/databricks_workflows/: unit_tests.yaml
mlops/nyc_taxi/databricks_workflows/: nyc_taxi.yaml  unit_tests.yaml
src/: requirements.txt
src/modules/acai_ml/: core.py
src/pkg/nyc_taxi/: pyproject.toml  setup.cfg
src/pkg/nyc_taxi/src_nyc_taxi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pkg/nyc_taxi/training/: __init__.py
src/tutorial/: README.md  cluster_config.json  create_databricks_secrets.py  deploy.py
test/: entrypoint.py
test/test_dbx_utils_pkg/: test_utils_azure_login.py  test_utils_create_azure_resources.py  test_utils_create_cluster.py  test_utils_create_repo_folder.py  test_utils_repo_pull.py
workflows/: deployment.yaml  sandboxdeployment.yaml
workflows/jobConfigs/: jobConfigs.yaml
(+340 files in other folders)
