[tool.poetry]
name = "dbx_development"
version = "0.1.0"
description = "The description of the package"

license = "MIT"

authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]

repository = "https://github.com/python-poetry/poetry"
homepage = "https://python-poetry.org"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

packages = [
    {include = "utils", from = "data_science/src_nyc_taxi"},
    {include = "ciaran_experiments", from = "experiments/notebooks"},
    {include = "training", from = "data_science/src_nyc_taxi"},
    {include = "featurization", from = "data_science/src_nyc_taxi"}
]


[tool.poetry.dependencies]
# All Packages Destined For Databricks Cluster
# Only Install Pacakages Here That Are Not Already Installed On Databricks Cluster

# Compatible Python versions
python = ">=3.9, <3.11"



[tool.poetry.extras]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
packaging = "21.*"
numpy = "^1.24.3"
dbx = "^0.8.14"
mlflow-databricks-artifacts = "2.0.0"
#mlflow-skinny = "1.29.0"
databricks-cli = "0.17.3"
scikit-learn = "^1.2.2"
lightgbm = "^3.3.5"
pyyaml = "^6.0"
pathlib = "^1.0.1"
argparse = "^1.4.0"
#pywin32 = "^306"
#azureml-core = "^1.51.0"

##requests = "2.24"
##py4j = "0.10.9.5"
##pyspark = "3.3.2"
py4j = "0.10.9.7"

[tool.poetry.group.dbx_connect.dependencies]
dbx = "^0.8.14"
databricks-feature-store = "^0.12.1"
lightgbm = "^3.3.5"
azureml-core = "^1.51.0"
python-dotenv = "^1.0.0"
wheel = "^0.40.0"
databricks-connect = "^13.0.1"

[tool.poetry.scripts]


# requests = 2.28.2
# charset-normalizer = 3.1.0
# protobuf = 4.23.2
# requests = 2.28.2