[tool.poetry]
name = "mlops_for_databricks"
version = "0.1.0"
description = "Full CICD deployment of mlops for Databricks"

license = "MIT"

authors = [
    "Ciaran Hamill Diamond"
]

repository = "https://github.com/python-poetry/poetry"
homepage = "https://python-poetry.org"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

packages = [
    {include = "dbx_utils", from = "src/pkg"},
    {include = "nyc_taxi", from = "src/pkg"},
    {include = "ciaran_experiments", from = "experiments/notebooks"}
]


[tool.poetry.dependencies]
# All Packages Destined For Databricks Cluster
# Only Install Pacakages Here That Are Not Already Installed On Databricks Cluster

python = ">=3.8, <3.11"
numpy = "^1.24.3"
dbx = "^0.8.16"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
bandit = "1.7.4"
pylint = "2.15.0"
pylint_junit = "0.3.2"
python-dotenv = "1.0.0"
pyspark = "3.2.1"
delta-spark = "1.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
packaging = "21.*"
numpy = "^1.24.3"
dbx = "^0.8.14"
mlflow-databricks-artifacts = "2.0.0"
databricks-cli = "0.17.3"
scikit-learn = "^1.2.2"
lightgbm = "^3.3.5"
pyyaml = "^6.0"
pathlib = "^1.0.1"
argparse = "^1.4.0"
py4j = "0.10.9.3"

[tool.poetry.group.dbx_connect.dependencies]
dbx = "^0.8.14"
databricks-feature-store = "^0.12.1"
lightgbm = "^3.3.5"
azureml-core = "^1.51.0"
python-dotenv = "^1.0.0"
wheel = "^0.40.0"
databricks-connect = "^13.0.1"

[tool.poetry.extras]
[tool.poetry.scripts]