[metadata]
name = src_nyc_taxi
version = 0.0.1
description = NYC Taxi Data Source
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Ciaran Hamill Diamond

[options]
package_dir =
    src_nyc_taxi = src_nyc_taxi
packages = find:
platforms = any
include_package_data = True
python_requires = ==3.10.*
install_requires =
    packaging==21.*
    azure-identity
    azure-keyvault-secrets
    azure-keyvault-keys
    datetime
    argparse
    pathlib
    argon2-cffi==20.1.0
    astor==0.8.1
    astunparse==1.6.3
    async-generator==1.10
    attrs==21.2.0
    azure-core
    backcall==0.2.0
    backports.entry-points-selectable==1.1.1
    bcrypt==4.0.0
    black==22.3.0
    bleach==4.0.0
    blis==0.7.8
    boto3==1.21.18
    botocore==1.24.18
    cachetools==5.2.0
    certifi==2021.10.8
    cffi==1.14.6
    chardet==4.0.0
    charset-normalizer==2.0.4
    click==8.0.3
    databricks-automl-runtime==0.2.11
    databricks-cli==0.17.3
    Flask==1.1.2
    importlib-metadata==4.8.1
    ipykernel==6.12.1
    ipython==7.32.0
    ipython-genutils==0.2.0
    ipywidgets==7.7.0
    Jinja2==2.11.3
    jupyter-client==6.1.12
    jupyter-core==4.8.1
    jupyterlab-pygments==0.1.2
    jupyterlab-widgets==1.0.0
    mlflow-databricks-artifacts==2.0.0
    mlflow-skinny==1.29.0
    pip==23.1.2
    pydantic==1.9.2
    pytz==2021.3
    PyYAML==6.0
    pyzmq==22.2.1
    regex==2021.8.3
    requests==2.28.1
    requests-oauthlib==1.3.1
    requests-unixsocket==0.2.0
    urllib3==1.26.7
    virtualenv==20.8.0
    visions==0.7.4
    wasabi==0.10.1
    wcwidth==0.2.5
    webencodings==0.5.1
    websocket-client==1.3.1
    Werkzeug==2.0.2
    wheel==0.37.0
    widgetsnbextension==3.6.0
    wrapt==1.12.1
    xgboost==1.6.2
    zipp==3.6.0
    azureml-mlflow==1.50.0
    azureml-core==1.50.0
    azure-ai-ml==1.4.0
    sklearn_pandas==2.2.0
    azureml-sdk==1.50.0
    uszipcode
    lightgbm
    azureml-sdk[databricks]==1.50.0
    python-dotenv
    databricks-feature-store==0.10.*
    azure-cosmos==4.3.1

[options.extras_require]
test =
    bandit==1.7.4
    freezegun==1.2.2
    pydocstyle==6.1.1
    pylint==2.15.0
    pylint_junit==0.3.2
    pytest==7.1.2
    pytest-cov==3.0.0

build =
    databricks-cli==0.17.0
    wheel==0.37.1
 

[pylint]
disable =
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods
jobs = 4
output-format = colorized

# Maximum number of locals for function / method body
max-locals = 20

# Maximum number of arguments for function / method
max-args = 10

good-names = df
